[build-system]
requires = ["setuptools>=61.0", "numpy>1.13,<=1.22"]
build-backend = "setuptools.build_meta"

[project]
name = "ls"
version = "0.0.1"
description = ""
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7,<3.12"
dependencies = [
  "requests>2",
  "numpy<=1.22"
]

